# swITch

./: .gitignore  LICENSE.txt  README.md  README.txt  cDevice.py  config.py  dDevice.py  devThread.py  device.py  device_connector.py  device_test.py  hDevice.py  logger.py  output.txt  pyproject.toml  sentry_pdu.py  singleDevThread.py  swITch.py
NewPythonProject/nbproject/: project.properties
nbproject/: project.properties  project.xml
src/swITch/: device_connector.py  logger.py  sentry_pdu.py  swITch.py
